# gz-sim-yarp-plugins

./: .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ci_env.yml  codecov.yml  pixi.toml
forcetorque/: CMakeLists.txt  ForceTorque.cc  ForceTorqueDriver.cpp  HelloWorld.cc  MyPlugin.cc  README.md  model.sdf  model2sensors.sdf
forcetorque/robotinterface/: CMakeLists.txt  GazeboYarpRobotInterface.cc  forcetorque2sensors_nws.xml
forcetorque/singleton/: CMakeLists.txt  Handler.cc  Handler.hh
imu/: CMakeLists.txt  IMU.cc  IMUDriver.cpp  model.sdf
imu/singleton/: Handler.cc  Handler.hh
libraries/common/: CMakeLists.txt  Common.hh  ConfigurationHelpers.cpp  ConfigurationHelpers.hh  DeviceIdGenerator.cpp  DeviceIdGenerator.hh  YarpDevReturnValueCompat.h
libraries/common/gzyarp/: Common.hh  ConfigurationHelpers.cpp  ConfigurationHelpers.hh  YarpDevReturnValueCompat.h
libraries/device-registry/: CMakeLists.txt  DeviceRegistry.cc  DeviceRegistry.hh
libraries/singleton-devices/: CMakeLists.txt  Handler.cc  Handler.hh
plugins/basestate/: BaseState.cc  BaseStateDriver.cpp  BaseStateShared.hh  CMakeLists.txt  ForceTorqueDriver.cpp
plugins/basestate/singleton/: BaseStateDataSingleton.cc  BaseStateDataSingleton.hh  CMakeLists.txt
plugins/basestate/singleton-basestate/: BaseStateDataSingleton.cc  BaseStateDataSingleton.hh  CMakeLists.txt  Handler.cc  Handler.hh
plugins/basestate/singleton-forcetorque/: Handler.cc
plugins/camera/: CMakeLists.txt  Camera.cc  CameraDriver.cpp  CameraShared.hh
plugins/camera/singleton/: CMakeLists.txt  CameraDataSingleton.cc  CameraDataSingleton.hh
plugins/camera/singleton-camera/: CMakeLists.txt  Handler.cc  Handler.hh
plugins/clock/: CMakeLists.txt  Clock.cc  README.md
plugins/configurationoverride/: CMakeLists.txt  ConfigurationOverride.cc  README.md
plugins/controlboard/: CMakeLists.txt
plugins/controlboard/include/: ControlBoard.hh  ControlBoardData.hh  ControlBoardDataSingleton.hh  ControlBoardDriver.hh  ControlBoardTrajectory.hh
plugins/controlboard/singleton/: CMakeLists.txt  ControlBoardData.hh  ControlBoardDataSingleton.cpp  ControlBoardDataSingleton.hh  ControlBoardTrajectory.cpp  ControlBoardTrajectory.hh
plugins/controlboard/src/: ControlBoard.cpp  ControlBoardData.cpp  ControlBoardDataSingleton.cpp  ControlBoardDriver.cpp  ControlBoardTrajectory.cpp
plugins/depthcamera/: CMakeLists.txt  DepthCamera.cc  DepthCamera.hh  DepthCameraDriver.cpp  DepthCameraDriver.h  DepthCameraShared.hh
plugins/forcetorque/: CMakeLists.txt  ForceTorque.cc  ForceTorqueDriver.cpp  ForceTorqueShared.hh  README.md
plugins/forcetorque/singleton/: CMakeLists.txt  (+2 more)
plugins/forcetorque/singleton-forcetorque/: CMakeLists.txt  Handler.cc  Handler.hh
plugins/imu/: CMakeLists.txt  IMU.cc  IMUDriver.cpp  Imu.cc  ImuDriver.cpp  ImuShared.hh
plugins/laser/: CMakeLists.txt  Laser.cc  LaserDriver.cpp  LaserShared.hh
plugins/robotinterface/: CMakeLists.txt  GazeboYarpRobotInterface.cc  GzYarpRobotInterface.cc  README.md  RobotInterface.cc
plugins/stereodepthcamera/: CMakeLists.txt  StereoDepthCamera.cc
plugins/worldinterface/: CMakeLists.txt
robotinterface/step4/: CMakeLists.txt  GazeboYarpRobotInterface.cc  README.md  model.sdf  prova.xml
robotinterface/step5/: CMakeLists.txt  ForceTorque.cc  ForceTorqueDriver.cpp  GazeboYarpRobotInterface.cc  Handler.cc  Handler.hh  README.md  forcetorque_nws.xml  model.sdf
tests/: CMakeLists.txt  Fetchtiny-process-library.cmake
tests/basestate/: BaseStateTest.cc  CMakeLists.txt  basestate_nws.xml  model.sdf
tests/camera/: CMakeLists.txt  CameraTest.cc  model.sdf  model_hor_flip.sdf  model_hor_ver_flip.sdf  model_ver_flip.sdf
tests/clock/: CMakeLists.txt  ClockTest.cc  modelWithYARPPortsNWS.sdf
tests/commons/: CMakeLists.txt  ConcurrentInstancesTest.cc  ConfigurationParsingFromFileTest.cc  ConfigurationParsingFromStringTest.cc  ConfigurationParsingTest.cc  dummy_box.sdf  dummy_sphere.sdf  model_configuration_file.sdf  model_configuration_string.sdf
tests/controlboard/: CMakeLists.txt  ControlBoardCommonsTest.cc  ControlBoardInitialConfigurationTest.cc  ControlBoardOnMultipleGazeboInstances.cc  ControlBoardOnMultipleGazeboInstancesTest.cc  ControlBoardPositionControlTest.cc  ControlBoardPositionDirectControlTest.cc  ControlBoardTest.cc  ControlBoardTorqueControlTest.cc  coupled_pendulum_multiple_gz_instances.sdf  coupled_pendulum_no_plugins.sdf  coupled_pendulum_two_controlboards.sdf  coupled_pendulum_two_joints_coupled.sdf  coupled_pendulum_two_joints_single_controlboard.sdf  double_pendulum_multiple_gz_instances.sdf  dummy_box.sdf  pendulum_joint_relative_to_child_link.sdf  pendulum_joint_relative_to_parent_link.sdf  pendulum_multiple_gz_instances.sdf  pendulum_no_initial_configuration.sdf  pendulum_with_doubly_overriden_initial_configuration.sdf  pendulum_with_initial_configuration.sdf  pendulum_with_overriden_initial_configuration.sdf  single_pendulum_no_initial_configuration.sdf  single_pendulum_with_initial_configuration.sdf
tests/depthcamera/: CMakeLists.txt  DepthCameraTest.cc  depthcamera_nws.xml  depthcamera_nws.xml.in  model.sdf
tests/forcetorque/: CMakeLists.txt  ForceTorqueTest.cc  README.md  model.sdf
tests/gz-sim-yarp-plugins-check-model/: CMakeLists.txt  world_with_robotinterface_with_non_existing_filename.sdf
tests/imu/: CMakeLists.txt  ImuTest.cc  model.sdf
tests/laser/: CMakeLists.txt  LaserTest.cc  laser.ini  model.sdf
tests/robotinterface/: CMakeLists.txt  RobotInterfaceTest.cc  robotinterface_config.xml  robotinterface_config_device1.xml  robotinterface_config_device2.xml  robotinterface_with_default_tags.sdf  robotinterface_with_enable_device1.sdf  robotinterface_with_enable_device1_and_device2.sdf  robotinterface_with_enable_device1_and_device2_disable_device1.sdf
tests/stereodepthcamera/: CMakeLists.txt  StereoDepthCameraTest.cc  model.sdf  stereodepthcamera_nws.xml.in
tests/test-helpers/: CMakeLists.txt  TestHelpers.hh
tests/worldinterface/: CMakeLists.txt  model.sdf  worldinterface.cc
(+109 files in other folders)
